--- a/single-blog.html
+++ b/single-blog.html
@@ -110,80 +110,26 @@
 
                 <p>vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum
                 zzril delenit augue duis dolore te feugait nulla facilisi.</p>
-                <div class="courseSyllabus">
-                    <h2 class="title--secundary">Listado de Temas</h2>
-                    <div class="courseSyllabus__item">
-                        <h4 class="courseSyllabus__title">Sesión 1 - Bootstrap Cambiara tu vida</h4>
-                        <ol>
-                            <li>Video Numero 1, información Introductoria</li>
-                            <li>Video Numero 2, información Introductoria</li>
-                        </ol>
-                    </div>
-                    <div class="courseSyllabus__item">
-                        <h4 class="courseSyllabus__title">Sesión 2 - Bootstrap Cambiara tu vida</h4>
-                        <ol>
-                            <li>Video Numero 1, información Introductoria</li>
-                            <li>Video Numero 2, información Introductoria</li>
-                        </ol>
-                    </div>
-                    <div class="courseSyllabus__item">
-                        <h4 class="courseSyllabus__title">Sesión 1 - Bootstrap Cambiara tu vida</h4>
-                        <ol>
-                            <li>Video Numero 1, información Introductoria</li>
-                            <li>Video Numero 2, información Introductoria</li>
-                        </ol>
-                    </div>
-                    <div class="courseSyllabus__item">
-                        <h4 class="courseSyllabus__title">Sesión 3 - Bootstrap Cambiara tu vida</h4>
-                        <ol>
-                            <li>Video Numero 1, información Introductoria</li>
-                            <li>Video Numero 2, información Introductoria</li>
-                        </ol>
-                    </div>
-                    <div class="courseSyllabus__item">
-                        <h4 class="courseSyllabus__title">Sesión 4 - Bootstrap Cambiara tu vida</h4>
-                        <ol>
-                            <li>Video Numero 1, información Introductoria</li>
-                            <li>Video Numero 2, información Introductoria</li>
-                        </ol>
-                    </div>
-                    <div class="courseSyllabus__item">
-                        <h4 class="courseSyllabus__title">Sesión 5 - Bootstrap Cambiara tu vida</h4>
-                        <ol>
-                            <li>Video Numero 1, información Introductoria</li>
-                            <li>Video Numero 2, información Introductoria</li>
-                        </ol>
-                    </div>
-                    <div class="courseSyllabus__item">
-                        <h4 class="courseSyllabus__title">Sesión 6 - Bootstrap Cambiara tu vida</h4>
-                        <ol>
-                            <li>Video Numero 1, información Introductoria</li>
-                            <li>Video Numero 2, información Introductoria</li>
-                        </ol>
-                    </div>
+                <div class="comentarios">
+                    <h2>Aqui Van los comentarios disqus</h2>
                 </div>
-                <a href="#" class="button button--main ml-0 mt-2">Suscribirse</a>
             </article>
             <!-- End Content information course main -->
             <aside class="courseInformation__teacher text-center">
-                <figure class="courseInformation__teacher--image">
-                    <img class="rounded-circle" src="img/yan-arlex-vallejo.jpg" alt="Yan Arlex Vallejo">
-                    <figcaption>Yan Arlex Vallejo</figcaption>
-                </figure>
-                <div class="courseInformation__teacher--price mt-2">
-                    <strong class="courseInformation__teacher--titleSecundary">Precio</strong>
-                    <span class="courseInformation__teacher--value ap-price">$35.000</span>
-                </div>
-                 <div class="courseInformation__teacher--otherInformation mt-2">
-                    <strong class="courseInformation__teacher--titleSecundary">Duración</strong>
-                    <span class="courseInformation__teacher--value">130 horas</span>
-                 </div>
-                <div class="courseInformation__teacher--otherInformation mt-2">
-                    <strong class="courseInformation__teacher--titleSecundary">Contenido</strong>
-                    <span class="courseInformation__teacher--value">10 videos</span>
-                </div>
-                <div class="courseInformation__teacher--button mt-2">
-                    <a href="#" class="button button--main">Suscribirse</a>
+                <div class="ap-widget">
+                    <h3 class="title--secundary pb-1">Últimas Noticias</h3>
+                    <ul class="ap-widget__list list-none">
+                        <li><a href="#">Cómo mostrar "algo" sólo una vez al día, a la semana, o cada X horas</a></li>
+                        <li><a href="#">Cómo subir una imagen vía Ajax (usando Laravel como backend)</a></li>
+                        <li><a href="#">¿Cómo añado mis propias clases a un proyecto de Laravel?</a></li>
+                        <li><a href="#">Redirigir a un usuario a la página que estaba viendo (o a otra, en Laravel)</a></li>
+                        <li><a href="#">Cómo configurar VirtualHosts con Apache en Windows (en 2 pasos)</a></li>
+                        <li><a href="#">Por qué, cómo y cuándo usar Service Providers en Laravel</a></li>
+                        <li><a href="#">Cómo fijar, planear y alcanzar los objetivos más grandes de tu vida</a></li>
+                        <li><a href="#">Define tus propios helpers en Laravel (en 2 simples pasos)</a></li>
+                        <li><a href="#">Javascript: Funciones que son invocadas inmediatamente (IIFE)</a></li>
+                        <li><a href="#">Cómo asociar un dominio con un hosting (Namecheap con DigitalOcean)</a></li>
+                    </ul>
                 </div>
             </aside>
             <!-- End Content teacher,price, duration -->
