--- a/yan.html
+++ b/yan.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>AprendiendoAndo</title>
-    <meta name="description" content="">
+    <title>Desarrollo de páginas web en Tuluá - Yan Arlex Vallejo</title>
+    <meta name="description" content="Desarrollamos la página web de tu empresa Tuluá.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -64,9 +64,9 @@
                     <ul class="list-none nav__top">
                         <li><a class="decoration-none current" href="index.html" data-hover="Inicio">Inicio</a></li>
                         <li><a class="decoration-none" href="cursos.html" data-hover="Cursos">Cursos</a></li>
-                        <li><a class="decoration-none" href="yan.html" data-hover="Acerca De">Acerca De</a></li>
-                        <li><a class="decoration-none" href="blog.html" data-hover="Blog">Blog</a></li>
-                        <li><a class="decoration-none" href="contacto.html" data-hover="Contacto">Contacto</a></li>
+                        <li><a class="decoration-none" href="#" data-hover="Acerca De">Acerca De</a></li>
+                        <li><a class="decoration-none" href="#" data-hover="Blog">Blog</a></li>
+                        <li><a class="decoration-none" href="#" data-hover="Contacto">Contacto</a></li>
                     </ul>
                 </nav> <!-- End Nav Main -->
             </div> <!-- End Header Bottom -->
@@ -74,120 +74,21 @@
     </header>
     <aside class="ap-breadcrumbs">
         <div class="box">
-            <h1 class="title--main title--single">Bootstap, Lo mejor del mundo Parte 1</h1>
+            <h1 class="title--main title--single">Yan Arlex Vallejo Rosas</h1>
         </div>
     </aside>
     <main class="main mt-0">
-        <aside class="box filterCourses">
-            <div class="filterCourses__tags">
-                <span>Categoría: </span>
-                <ul class="ap-tags list-none">
-                    <li><a href="#">Diseño Web</a></li>
-                    <li><a href="#">Bootstrap</a></li>
-                    <li><a href="#">SublimeText</a></li>
-                    <li><a href="#">Css</a></li>
-                </ul>
-            </div>
-        </aside>
-        <section class="box courseInformation ">
-            <article class="courseInformation__content">
-                <header class="mt-1">
-                    <figure class="sin-margin">
-                        <img src="img/startup.jpg" alt="Bootstap, Lo mejor del mundo Parte 1">
-                    </figure>
-                </header>
-                <h2 class="title--secundary">Descripción del curso</h2>
-                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
-                aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no
-                sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
-                eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
-                et ea rebum.</p>
-
-                <p>Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur
-                sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero
-                eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor
-                sit amet.</p>
-
-                <p>vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum
-                zzril delenit augue duis dolore te feugait nulla facilisi.</p>
-                <div class="courseSyllabus">
-                    <h2 class="title--secundary">Listado de Temas</h2>
-                    <div class="courseSyllabus__item">
-                        <h4 class="courseSyllabus__title">Sesión 1 - Bootstrap Cambiara tu vida</h4>
-                        <ol>
-                            <li>Video Numero 1, información Introductoria</li>
-                            <li>Video Numero 2, información Introductoria</li>
-                        </ol>
-                    </div>
-                    <div class="courseSyllabus__item">
-                        <h4 class="courseSyllabus__title">Sesión 2 - Bootstrap Cambiara tu vida</h4>
-                        <ol>
-                            <li>Video Numero 1, información Introductoria</li>
-                            <li>Video Numero 2, información Introductoria</li>
-                        </ol>
-                    </div>
-                    <div class="courseSyllabus__item">
-                        <h4 class="courseSyllabus__title">Sesión 1 - Bootstrap Cambiara tu vida</h4>
-                        <ol>
-                            <li>Video Numero 1, información Introductoria</li>
-                            <li>Video Numero 2, información Introductoria</li>
-                        </ol>
-                    </div>
-                    <div class="courseSyllabus__item">
-                        <h4 class="courseSyllabus__title">Sesión 3 - Bootstrap Cambiara tu vida</h4>
-                        <ol>
-                            <li>Video Numero 1, información Introductoria</li>
-                            <li>Video Numero 2, información Introductoria</li>
-                        </ol>
-                    </div>
-                    <div class="courseSyllabus__item">
-                        <h4 class="courseSyllabus__title">Sesión 4 - Bootstrap Cambiara tu vida</h4>
-                        <ol>
-                            <li>Video Numero 1, información Introductoria</li>
-                            <li>Video Numero 2, información Introductoria</li>
-                        </ol>
-                    </div>
-                    <div class="courseSyllabus__item">
-                        <h4 class="courseSyllabus__title">Sesión 5 - Bootstrap Cambiara tu vida</h4>
-                        <ol>
-                            <li>Video Numero 1, información Introductoria</li>
-                            <li>Video Numero 2, información Introductoria</li>
-                        </ol>
-                    </div>
-                    <div class="courseSyllabus__item">
-                        <h4 class="courseSyllabus__title">Sesión 6 - Bootstrap Cambiara tu vida</h4>
-                        <ol>
-                            <li>Video Numero 1, información Introductoria</li>
-                            <li>Video Numero 2, información Introductoria</li>
-                        </ol>
-                    </div>
-                </div>
-                <a href="#" class="button button--main ml-0 mt-2">Suscribirse</a>
-            </article>
-            <!-- End Content information course main -->
-            <aside class="courseInformation__teacher text-center">
-                <figure class="courseInformation__teacher--image">
-                    <img class="rounded-circle" src="img/yan-arlex-vallejo.jpg" alt="Yan Arlex Vallejo">
-                    <figcaption>Yan Arlex Vallejo</figcaption>
-                </figure>
-                <div class="courseInformation__teacher--price mt-2">
-                    <strong class="courseInformation__teacher--titleSecundary">Precio</strong>
-                    <span class="courseInformation__teacher--value ap-price">$35.000</span>
-                </div>
-                 <div class="courseInformation__teacher--otherInformation mt-2">
-                    <strong class="courseInformation__teacher--titleSecundary">Duración</strong>
-                    <span class="courseInformation__teacher--value">130 horas</span>
-                 </div>
-                <div class="courseInformation__teacher--otherInformation mt-2">
-                    <strong class="courseInformation__teacher--titleSecundary">Contenido</strong>
-                    <span class="courseInformation__teacher--value">10 videos</span>
-                </div>
-                <div class="courseInformation__teacher--button mt-2">
-                    <a href="#" class="button button--main">Suscribirse</a>
-                </div>
-            </aside>
-            <!-- End Content teacher,price, duration -->
+        <section class="box yan">
+            <h1>Tengo que ver como mostrar mi portafolio aca.</h1>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </section>
+
+
         <!-- Start Relationship Courses -->
         <section class="list-courses pb-5 featured-courses">
             <div class="box">
