--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <div class="slider__left">
                     <h2 class="title title--big">¿Que quieres aprender hoy?</h2>
                     <h4 class="title title--small">Todo esto encontraras en <strong>Aprendiendoando</strong></h4>
-                    <a href="#" class="button button--main ml-0">Ver todos los cursos</a>
+                    <a href="#" class="button button--main ml-0 button--animation">Ver todos los cursos</a>
                 </div>
                 <div class="slider__right">
                     <img src="img/lenguajes-slider.png" alt="AprendiendoAndo" width="400" height="285">
@@ -286,7 +286,7 @@
                 </footer>
             </article>
         </section> <!-- End List Courses -->
-            <a href="cursos.html" class="button button--main mb-5" title="Ver todos los cursos">Ver todos los cursos</a>
+            <a href="cursos.html" class="button button--main mb-5 button--animation" title="Ver todos los cursos">Ver todos los cursos</a>
         <section class="register">
             <div class="box box--center">
                 <article class="register__testimonial">
