--- a/yan.html
+++ b/yan.html
@@ -64,9 +64,9 @@
                     <ul class="list-none nav__top">
                         <li><a class="decoration-none current" href="index.html" data-hover="Inicio">Inicio</a></li>
                         <li><a class="decoration-none" href="cursos.html" data-hover="Cursos">Cursos</a></li>
-                        <li><a class="decoration-none" href="#" data-hover="Acerca De">Acerca De</a></li>
-                        <li><a class="decoration-none" href="#" data-hover="Blog">Blog</a></li>
-                        <li><a class="decoration-none" href="#" data-hover="Contacto">Contacto</a></li>
+                        <li><a class="decoration-none" href="yan.html" data-hover="Acerca De">Acerca De</a></li>
+                        <li><a class="decoration-none" href="blog.html" data-hover="Blog">Blog</a></li>
+                        <li><a class="decoration-none" href="contacto.html" data-hover="Contacto">Contacto</a></li>
                     </ul>
                 </nav> <!-- End Nav Main -->
             </div> <!-- End Header Bottom -->
